Name:           Edison
Version:        1.2
License:        BSD3
License-File:   COPYRIGHT
Author:         Chris Okasaki
Maintainer:     robdockins@fastmail.fm
Synopsis:       A library of efficent, purely-functional data structures
Category:       Data structures
Stability:      Beta
Hs-Source-Dir:  src
Exposed-modules:
     Data.Edison.Prelude
     Data.Edison.Assoc
     Data.Edison.Assoc.Defaults
     Data.Edison.Assoc.AssocList
     Data.Edison.Assoc.PatriciaLoMap
     Data.Edison.Assoc.TernaryTrie
     Data.Edison.Coll
     Data.Edison.Coll.Defaults
     Data.Edison.Coll.CollectionUtils
     Data.Edison.Coll.LazyPairingHeap
     Data.Edison.Coll.LeftistHeap
     Data.Edison.Coll.MinHeap
     Data.Edison.Coll.SkewHeap
     Data.Edison.Coll.SplayHeap
     Data.Edison.Coll.UnbalancedSet
     Data.Edison.Seq
     Data.Edison.Seq.Defaults
     Data.Edison.Seq.BankersQueue
     Data.Edison.Seq.BinaryRandList
     Data.Edison.Seq.BraunSeq
     Data.Edison.Seq.JoinList
     Data.Edison.Seq.ListSeq
     Data.Edison.Seq.MyersStack
     Data.Edison.Seq.RandList
     Data.Edison.Seq.RevSeq
     Data.Edison.Seq.SimpleQueue
     Data.Edison.Seq.SizedSeq
Build-Depends:
     base >= 1.0,
     haskell98 >= 1.0,
     QuickCheck >= 1.0
Extensions:
     MultiParamTypeClasses
     FunctionalDependencies
     AllowUndecidableInstances
Ghc-Options: -funbox-strict-fields
