Build-type:     Simple
Name:           EdisonAPI
Cabal-Version:  >= 1.10
Version:        1.3.3.2
License:        MIT
License-File:   COPYRIGHT
Author:         Chris Okasaki
Maintainer:     lysxia@gmail.com
Synopsis:       A library of efficient, purely-functional data structures (API)
Category:       Data Structures
Homepage:       https://github.com/robdockins/edison
Stability:      Stable
Description:
   Edison is a library of purely functional data structures written by
   Chris Okasaki.  It is named after Thomas Alva Edison and for the
   mnemonic value EDiSon (Efficient Data Structures).
   Edison provides several families of abstractions, each with
   multiple implementations.  The main abstractions provided by Edison are:
   Sequences such as stacks, queues, and dequeues;
   Collections such as sets, bags and heaps; and
   Associative Collections such as finite maps and priority queues
    where the priority and element are distinct.
Extra-Source-Files: CHANGES.md
tested-with: GHC == 8.10.7, GHC == 9.6.7, GHC == 9.12.1, GHC == 9.14.1

Source-Repository head
  Type: git
  Location: https://github.com/robdockins/edison/
  Subdir: edison-api

Library
  Hs-Source-Dirs: src
  Exposed-modules:
     Data.Edison
     Data.Edison.Prelude
     Data.Edison.Sym
     Data.Edison.Assoc
     Data.Edison.Coll
     Data.Edison.Coll.Utils
     Data.Edison.Seq
     Data.Edison.Seq.ListSeq
  Build-Depends:
     base >= 4.12 && < 4.23
  if impl(ghc < 8.0)
    build-depends: fail < 5
  Default-Language: Haskell2010
  Default-Extensions:
     MultiParamTypeClasses
     FunctionalDependencies
     UndecidableInstances
  Ghc-Options: -funbox-strict-fields -fwarn-incomplete-patterns
