Name:           EdisonCore
Cabal-Version:  >= 1.10
Build-Type:     Simple
Version:        1.3.3.1
License:        MIT
License-File:   COPYRIGHT
Author:         Chris Okasaki
Maintainer:     robdockins AT fastmail DOT fm
Synopsis:       A library of efficient, purely-functional data structures (Core Implementations)
Category:       Data Structures
Homepage:	http://rwd.rdockins.name/edison/home/
Stability:      Stable
Description:
     This package provides the core Edison data structure implementations,
     including multiple sequence, set, bag, and finite map concrete
     implementations with various performance characteristics. The
     implementations in this package have no dependencies other than those
     commonly bundled with Haskell compilers.
Extra-Source-Files: CHANGES


Source-Repository head
  Type: git
  Location: https://github.com/robdockins/edison/
  Subdir: edison-core

Library
  Hs-Source-Dirs: src
  Exposed-modules:
     Data.Edison.Assoc.Defaults
     Data.Edison.Assoc.AssocList
     Data.Edison.Assoc.PatriciaLoMap
     Data.Edison.Assoc.StandardMap
     Data.Edison.Assoc.TernaryTrie
     Data.Edison.Concrete.FingerTree
     Data.Edison.Coll.Defaults
     Data.Edison.Coll.LazyPairingHeap
     Data.Edison.Coll.LeftistHeap
     Data.Edison.Coll.MinHeap
     Data.Edison.Coll.SkewHeap
     Data.Edison.Coll.SplayHeap
     Data.Edison.Coll.StandardSet
     Data.Edison.Coll.EnumSet
     Data.Edison.Coll.UnbalancedSet
     Data.Edison.Seq.Defaults
     Data.Edison.Seq.BankersQueue
     Data.Edison.Seq.BinaryRandList
     Data.Edison.Seq.BraunSeq
     Data.Edison.Seq.FingerSeq
     Data.Edison.Seq.JoinList
     Data.Edison.Seq.MyersStack
     Data.Edison.Seq.RandList
     Data.Edison.Seq.RevSeq
     Data.Edison.Seq.SimpleQueue
     Data.Edison.Seq.SizedSeq
  Build-Depends:
     base == 4.*,
     QuickCheck >= 2.8.2 && < 3,
     EdisonAPI >= 1.3.3 && < 1.4,
     containers,
     array

  if impl(ghc < 8.0)
    Build-Depends:
      fail,
      -- Provide/emulate Data.Semigroups` API for pre-GHC-8
      semigroups == 0.18.*

  Default-Language: Haskell2010
  Default-Extensions:
     MultiParamTypeClasses
     FunctionalDependencies
     UndecidableInstances
     FlexibleInstances
     CPP
     MagicHash
     ScopedTypeVariables
     GeneralizedNewtypeDeriving
     FlexibleContexts
  Ghc-Options: -funbox-strict-fields -fwarn-incomplete-patterns
  if impl(ghc >= 8.0)
    Ghc-Options:  -Wcompat
