Build-type:     Simple
Name:           Edison-test
Version:        1.3.2
Cabal-version:  >= 1.10
License:        MIT
Maintainer:     robdockins AT fastmail DOT fm
Synopsis:       Testsuite for Edison
Category:       Data structures
Stability:      provisional

Source-Repository head
  Type: git
  Location: https://github.com/robdockins/edison/
  Subdir: test

Executable testSuite
  Main-Is: Main.hs
  Other-modules:
    Data.Edison.Test.Bag
    Data.Edison.Test.Driver
    Data.Edison.Test.FM
    Data.Edison.Test.Seq
    Data.Edison.Test.Set
    Data.Edison.Test.Utils
  Hs-Source-Dirs:  src
  Build-Depends:
     base == 4.*,
     mtl >= 1.0,
     QuickCheck >= 2.8.2 && < 3,
     HUnit >= 1.1,
     EdisonAPI,
     EdisonCore
  Default-Language: Haskell2010
  Default-Extensions:
     MultiParamTypeClasses
     FunctionalDependencies
     UndecidableInstances
     GeneralizedNewtypeDeriving
     TypeSynonymInstances
     FlexibleInstances
     FlexibleContexts
