Build-type:     Simple
Name:           Edison-test
Version:        1.3.3.3
Cabal-version:  >= 1.10
License:        MIT
Maintainer:     lysxia@gmail.com
Synopsis:       Testsuite for Edison
Category:       Data structures
Stability:      provisional
tested-with: GHC == 8.10.7, GHC == 9.6.7, GHC == 9.12.1, GHC == 9.14.1

Source-Repository head
  Type: git
  Location: https://github.com/robdockins/edison/
  Subdir: test

test-suite testSuite
  type: exitcode-stdio-1.0
  Main-Is: Main.hs
  Other-modules:
    Data.Edison.Test.Bag
    Data.Edison.Test.Driver
    Data.Edison.Test.FM
    Data.Edison.Test.Seq
    Data.Edison.Test.Set
    Data.Edison.Test.Utils
  Hs-Source-Dirs:  src
  Build-Depends:
     base == 4.*,
     QuickCheck >= 2.8.2 && < 3,
     HUnit >= 1.1,
     EdisonAPI,
     EdisonCore
  Default-Language: Haskell2010
  Default-Extensions:
     MultiParamTypeClasses
     FunctionalDependencies
     UndecidableInstances
     GeneralizedNewtypeDeriving
     TypeSynonymInstances
     FlexibleInstances
     FlexibleContexts
